# kb-mcp

./: .gitignore  NEW_MACHINE_SETUP.docx  NEW_MACHINE_SETUP.md  README.md  install.ps1  pyproject.toml  rebuild.ps1
src/kb_mcp/: __init__.py  build_index.py  server.py
