[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "grp-kb-mcp"
version = "0.1.2"
description = "Semantic search MCP server for an Acumatica KB Obsidian vault (Smart Connections embeddings)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arvindh" }]
dependencies = [
    "mcp[cli]",
    "numpy",
    "sentence-transformers",
]

[project.scripts]
grp-kb-mcp = "kb_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
